Fixed formatting and extra space between customer and burger

--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@
 }
 
 #customerImage {
-    width: 200px;
-    height: 300px;
+    width: 125px;
+    height: 250px;
     position: relative;
     left: 50px;
     bottom: 40px;
@@ -45,6 +45,15 @@
     height: 200px;
     position: relative;
     right: 150px;
+    
+}
+
+#speechBubble {
+    width: 250px;
+    height: 150px;
+    position: relative;
+    right: 200px;
+    top: 50px;
 }
 
 #nextTopping {
@@ -88,15 +97,16 @@
 }
 
 #serve {
+    z-index: 3;
     position: relative;
-    right: 350px;
+    left: 120px;
     bottom: 80px;
 }
 
 #customerText {
     position: relative;
     bottom: 40px;
-    right: 100px;
+    right: 200px;
 }
 
 #score {
@@ -110,11 +120,16 @@
 }
 
 #customer {
-    float: left;
-    margin-top: 100px;
+    width: 35%;
 }
 
 #burger {
-    float: left;
     margin-top: 50px;
+    margin-left: -30px;
+}
+
+#counterImage {
+    z-index: 2;
+    margin-top: -200px;
+    margin-left: 100px;
 }
